<resources>
    <string name="app_name">First Mobile</string>
    <string name="welcome_text">Selamat Datang di Prodi Informatika, \nFakultas Teknik,\nUniversitas Jenderal Soedirman</string>
    <string name="inf_description">Program Studi Informatika di Universitas Jenderal Soedirman (Unsoed) berdiri pada tahun 2008, berawal dari kebutuhan yang semakin mendesak akan tenaga ahli di bidang teknologi informasi dan komunikasi. Saat itu, perkembangan teknologi yang pesat di Indonesia dan dunia memerlukan adanya program pendidikan tinggi yang mampu mencetak lulusan dengan kompetensi tinggi di bidang informatika. \nPada tahun tersebut, Fakultas Sains dan Teknik (FST) Unsoed mengambil inisiatif untuk mendirikan Program Studi Informatika. Pembentukan program studi ini bertujuan untuk memenuhi tuntutan masyarakat dan industri yang membutuhkan tenaga profesional dalam bidang teknologi informasi. Kurikulum yang disusun dirancang untuk memberikan pendidikan berkualitas, menggabungkan aspek praktis dan teoritis dari informatika, seperti pemrograman, sistem informasi, jaringan komputer, dan kecerdasan buatan.</string>
    <string name="gedung_teknik_desc">Gambar Gedung Teknik</string>
    <string name="next">Next</string>
    <string name="himpunan">Himpunan Mahasiswa Informatika (HMIF UNSOED)</string>

    <string name="profil_lulusan">Profil Lulusan</string>
    <string name="deskripsi_lulusan">Lulusan Program Studi Informatika Unsoed sebagian besar bekerja sebagai tenaga ahli di bidang perekayasaan perangkat lunak (Programer, Analis Sistem, Manajer Proyek, Database Administrator), Wirausahawan Informatika dan Dosen/Peneliti.</string>

    <string name="nomor_telepon">(0281)6596700</string>
    <string name="alamat_email">teknik@unsoed.ac.id</string>
    <string name="alamat_lokasi">Raya Mayjen Sungkono km 5, Dusun 2, Blater, Kec. Kalimanah, Kabupaten Purbalingga, Jawa Tengah 53371</string>
    <string name="instagram_url">https://www.instagram.com/hmifunsoed</string>

    <string name="kembali">Kembali</string>

    <string name="deskripsi_gedung_teknik">Gedung Fakultas Teknik Unsoed</string>
    <string name="deskripsi_logo_unsoed">Logo Universitas Jenderal Soedirman</string>
    <string name="deskripsi_ikon_telepon">Ikon Telepon</string>
    <string name="deskripsi_ikon_email">Ikon Email</string>
    <string name="deskripsi_ikon_lokasi">Ikon Lokasi</string>
    <string name="deskripsi_ikon_instagram">Ikon Instagram</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="koleksi_buku">Koleksi Buku</string>

</resources>