<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_gedung_teknik"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/gedung_teknik"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/gedung_teknik_desc" />

    <TextView
        android:id="@+id/tv_welcome"
        style="@style/MaterialAlertDialog.Material3.Body.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:justificationMode="inter_word"
        tools:targetApi="o"
        android:text="@string/inf_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_page2"
        android:text="@string/next"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="50dp" />

</LinearLayout>
