<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Halaman2Activity">

    <!-- Gambar Gedung Teknik -->
    <ImageView
        android:id="@+id/iv_gedung_teknik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/teknik_unsoed_2"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/deskripsi_gedung_teknik"/>

    <!-- Logo Unsoed -->
    <ImageView
        android:id="@+id/iv_logo_unsoed"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/lambang_unsoed"
        android:contentDescription="@string/deskripsi_logo_unsoed"
        app:layout_constraintTop_toTopOf="@id/iv_gedung_teknik"
        app:layout_constraintBottom_toBottomOf="@id/iv_gedung_teknik"
        app:layout_constraintStart_toStartOf="@id/iv_gedung_teknik"
        app:layout_constraintEnd_toEndOf="@id/iv_gedung_teknik"/>

    <!-- Header Profil -->
    <TextView
        android:id="@+id/tv_profil_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#CCCCCC"
        android:padding="4dp"
        android:text="@string/profil_lulusan"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_unsoed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ScrollView untuk isi -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profil_header"
        app:layout_constraintBottom_toTopOf="@id/btn_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Card Deskripsi -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardBackgroundColor="@color/material_dynamic_primary90"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_lulusan"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/deskripsi_lulusan"
                    android:textSize="14sp"
                    android:textStyle="italic"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- Menu Kontak -->
            <LinearLayout
                android:id="@+id/linear_layout_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/card_profil">

                <include android:id="@+id/layoutPhone" layout="@layout/layout_menu"/>
                <include android:id="@+id/layoutEmail" layout="@layout/layout_menu"/>
                <include android:id="@+id/layoutLocation" layout="@layout/layout_menu"/>
                <include android:id="@+id/layoutIg" layout="@layout/layout_menu"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Tombol Kembali -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
